Fix modal and sidebar alerts overlap

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   overflow:hidden;
+  z-index: 1;
 }
 
 .modal-body {
